src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>bmg__ClickDetails__c</fullName>
        <description>Boomerang Integration field - URL will provide click through analysis for this recipient. You can obtain information about which links in the email the recipient was interested in clicking</description>
        <label>Click on URL to view click-thru report</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>bmg__DateClicked__c</fullName>
        <description>Boomerang integration field - Date URL was clicked</description>
        <label>Date URL was clicked</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>bmg__DateOpened__c</fullName>
        <label>Date Email Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>bmg__DateUnsubscribed__c</fullName>
        <description>Boomerang Integration Field - Date recipient unsubscribed, using this email to do so</description>
        <label>Date Recipient Opted Out</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>bmg__IsEmailClicked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boomerang integration field - indicates if the email is clicked</description>
        <label>Email Clicked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bmg__IsEmailOpened__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boomerang integration field - indicates if the email was opened</description>
        <label>Email Opened</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bmg__IsUnsubscribed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boomerang Integration field - indicates if the recipient has opted out. This information is also marked in the Email Opt Out field of the lead or contact</description>
        <label>Opted Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bmg__MessageURL__c</fullName>
        <description>Link to the message</description>
        <label>Click on URL to view Message</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>bmg__StatusDescription__c</fullName>
        <description>Boomerang integration field desc- provides additional information on the delivery status</description>
        <label>Delivery Status Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bmg__StatusUpdatedDate__c</fullName>
        <description>Boomerang Integration field - delivery date and time, indicates the most recent date and time at which the delivery status was updated</description>
        <label>Delivery Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>bmg__Type__c</fullName>
        <description>BlastWizard Integration field - indicates Type of Communication</description>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bmg__id__c</fullName>
        <description>Boomerang integration field</description>
        <externalId>true</externalId>
        <label>Boomerang Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Created_by_Cirrus_Insight__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that this record was created by Cirrus Insight. This checkbox does not have to be included on the page layout, except with Contact Manager, Group, and Professional Edition organizations.</description>
        <label>Created by Cirrus Insight</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Email_Opened__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Opened</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirrusadv__First_Opened__c</fullName>
        <inlineHelpText>The date this email was first opened by one of the recipients.</inlineHelpText>
        <label>First Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Last_Opened__c</fullName>
        <inlineHelpText>The date the email was most recently opened.</inlineHelpText>
        <label>Last Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Num_of_Opens__c</fullName>
        <inlineHelpText>Number of times this tracked email has been opened. (Cirrus Insight)</inlineHelpText>
        <label># of Opens</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Template_Name__c</fullName>
        <label>Template Name</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Time_to_Open__c</fullName>
        <formula>(cirrusadv__First_Opened__c - CreatedDate) * 24 * 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>How long did this email take to open? (in minutes)</inlineHelpText>
        <label>Time to Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cirrusadv__isTracked__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates that opens of this email will be tracked and reported by Cirrus Insight.</inlineHelpText>
        <label>Tracked</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>